[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "certifi>=2026.1.4",
    "cloudscraper>=1.2.71",
    "colorama>=0.4.6",
    "crypto>=1.4.1",
    "ffmpeg>=1.4",
    "flask>=3.1.3",
    "m3u8>=6.0.0",
    "pymongo>=4.16.0",
    "pyrogram>=2.0.106",
    "pyromod>=3.1.6",
    "pytube>=15.0.0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "tgcrypto>=1.2.5",
    "typing-extensions>=4.15.0",
    "yt-dlp>=2026.2.4",
]
